cmake_minimum_required(VERSION 3.15)
project( Project )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( project helper.hpp main.cpp )
add_executable( task robust.cpp )
target_link_libraries( project ${OpenCV_LIBS} )
target_link_libraries( task ${OpenCV_LIBS} )
